# AttachIQ

./: .gitignore  01_AttachIQ_Proposal.md  02_FINAL_REPORT_DRAFT.md  03_IMPLEMENTATION_JOURNEY.md  04_FINAL_AUDIT.md  AttachIQ_Proposal.md  README.md  justfile  pyproject.toml
models/fusion/: arch.json  label_map.json
models/image/: image_cnn_config.json  label_map.json
models/text/: label_map.json
reports/: FINAL_AUDIT.md  FINAL_REPORT_DRAFT.md  IMPLEMENTATION_JOURNEY.md  challenge_set_summary.json  evaluation_summary.md  fusion_data_summary.json  fusion_metrics.json  hard_fusion_data_summary.json  image_data_summary.json  image_metrics.json  image_pipeline_audit.json  latency_metrics.json  metrics_summary.json  text_data_summary.json  text_metrics.json
scripts/: reindent.py  verify_image_pipeline.py
src/attachiq/: __init__.py  config.py  logging.py  schemas.py
src/attachiq/data/: __init__.py  build_fusion_dataset.py  build_hard_fusion_dataset.py  build_image_dataset.py  build_text_dataset.py  image_dataset.py  text_dataset.py
src/attachiq/evaluation/: __init__.py  evaluate.py  evaluate_image.py  metrics.py
src/attachiq/inference/: __init__.py  cli.py  explanations.py  features.py  pipeline.py
src/attachiq/models/: fusion_mlp.py  image_cnn.py  text_model.py
src/attachiq/training/: train_fusion.py  train_image.py  train_text.py
src/attachiq/triage/: __init__.py  policy.py
src/attachiq/ui/: streamlit_app.py
tests/: test_fusion_features.py  test_inference.py  test_metrics.py  test_policy.py  test_schemas.py
